Modificacion de contacto y redes sociales

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Remes</title>
+    <title>Rehabilitación Médica Especializada </title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -36,13 +36,13 @@
                             <a class="nav-link" href="#">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#cta">Servicios</a>
+                            <a class="nav-link" href="#servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer">Instalaciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#pricing">Contacto</a>
+                            <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -70,48 +70,48 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section id="servicios">
 
         <div class="row">
             <div class="feature-box col-lg-4">
                     <i class="icon fas fa-hiking fa-4x"></i></i>
-                <h3>Geriátrica</h3>
+                <h3>Rehabilitación Geriátrica</h3>
                 <p>Atención a pacientes mayores de 65 años , ejercicios de reeducación funcional para actividades de la vida diaria y prevención de caídas.</p>
             </div>
 
             <div class="feature-box col-lg-4">
                 <i class="icon fas fa-baby fa-4x"></i>
-                <h3>Pediátrica</h3>
+                <h3>Rehabilitación Pediátrica</h3>
                 <p>Atención de niños desde 45 días de nacidos , prematuros o con antecedentes de factores adversos al nacimiento para prevención de retardo en su neurodesarrollo.</p>
             </div>
 
             <div class="feature-box col-lg-4">
                 <i class="icon fas fa-brain fa-4x"></i>
-                <h3>Neurológica</h3>
+                <h3>Rehabilitación Neurológica</h3>
                 <p>Atención de niños y adultos con secuelas de lesiones de daño cerebral como infartos cerebrales o traumatismos craneales.</p>
             </div>
 
             <div class="feature-box col-lg-4">
                     <i class="icon fas fa-swimmer fa-4x"></i></i>
-                <h3>Deportiva</h3>
-                <p>Atención a pacientes mayores de 65 años , ejercicios de reeducación funcional para actividades de la vida diaria y prevención de caídas.</p>
+                <h3>Rehabilitación Deportiva</h3>
+                <p>Acondicionamiento muscular y atención de lesiones deportivas.</p>
             </div>
 
             <div class="feature-box col-lg-4">
                 <i class="icon fas fa-female fa-4x"></i>
-                <h3>Ginecológica</h3>
-                <p>Atención de niños desde 45 días de nacidos , prematuros o con antecedentes de factores adversos al nacimiento para prevención de retardo en su neurodesarrollo.</p>
+                <h3>Rehabilitación Ginecológica</h3>
+                <p>Atención de pacientes con problemas  ginecológicos como la incontinencia urinaria.</p>
             </div>
 
             <div class="feature-box col-lg-4">
                 <i class="icon fas fa-bone fa-4x"></i>
-                <h3>Traumatología</h3>
-                <p>Atención de niños desde 45 días de nacidos , prematuros o con antecedentes de factores adversos al nacimiento para prevención de retardo en su neurodesarrollo.</p>
+                <h3>Rehabilitación Traumatología</h3>
+                <p>rehabilitación de lesiones como esguinces , fracturas, síndromes dolorosos.</p>
             </div>
             <div class="feature-box col-lg-4">
-                    <i class="icon fas fa-heart fa-4x"></i>
+                    <i class="icon fas fa-diagnoses fa-4x"></i>
                     <h3>Intervencionismo Analgésico</h3>
-                    <p>Atención de niños desde 45 días de nacidos , prematuros o con antecedentes de factores adversos al nacimiento para prevención de retardo en su neurodesarrollo.</p>
+                    <p>Aplicación de técnicas semiinvasivas para tratamiento de dolor como punción seca , electrólisis percutanea, terapia neural, toxina botulinica.</p>
                 </div>
 
 
@@ -219,15 +219,18 @@
     </section>
 
 
-    <!-- Call to Action -->
+    <!-- Contacto-->
 
-    <section id="cta">
+    <section id="contacto">
 
-        <h3 class="title-cta">Find the True Love of Your Dog's Life Today.</h3>
-        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
-            Download</button>
-
+        <h3 class="title-cta">Agenda una cita:</h3>
+        <a href="tel:3128578"><button type="button" class="btn btn-outline-light btn-lg download-button boton-telefono"><i class="fas fa-phone-alt"></i>
+            Llámanos</button></a>
+        <p class="parrafo-title"></p>
+        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.3691290938823!2d-101.18735178479218!3d19.696902637279138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842d0e74d9cb698b%3A0xa4443a71faa4ab78!2sCalle%20Ana%20Mar%C3%ADa%20Gallaga%20731%2C%20Cuauht%C3%A9moc%2C%2058020%20Morelia%2C%20Mich.!5e0!3m2!1ses-419!2smx!4v1573177790182!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <h2>Ana María Gallaga #731,Centro. Morelia,Michoacán</h2>
+        <br>
+        <h2>Teléfono: 3128578</h2>
     </section>
 
 
@@ -235,11 +238,11 @@
 
     <footer id="footer">
         <i class="fab fa-twitter fa-3x network-icons"></i>
-        <i class="fab fa-facebook-f fa-3x network-icons"></i>
+        <a href="https://www.facebook.com/REMES-Rehabilitaci%C3%B3n-M%C3%A9dica-Especializada-2331270286947582/" target="_blank"><i class="fab fa-facebook-f fa-3x network-icons"></i></a>
         <i class="fab fa-instagram fa-3x network-icons"></i>
         <i class="fas fa-envelope fa-3x network-icons"></i>
 
-        <p>© Copyright 2019 Kary Rodriguez</p>
+        <p>© Copyright 2019 Karina Rodriguez</p>
 
     </footer>
 
