Agregar contenido a seccion clases

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Rehabilitación Médica Especializada </title>
+    <meta name="description" content="Clínica con Médicos Especialistas en la prevención de lesiones musculoesqueléticas y discapacidad, prescripción de ejercicio terapéutico">
+    <meta name="keywords" content="clínica, Morelia, Remes, Remes morelia, rehabilitación física, rehabilitacion deportiva, terapias, rehabilitación Geriátrica, Artrosis, vendaje neuromuscular, rehabilitaciones, Microelectrolisis, hidroterapia, rehabilitación traumatológica, Mano, cicloergómetro, electroterapia, clinica morelia, compresas"/>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -42,6 +44,9 @@
                             <a class="nav-link" href="#footer">Instalaciones</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#clases">Clases de Natación</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
                     </ul>
@@ -68,7 +73,7 @@
     </section>
 
 
-    <!-- Features -->
+    <!-- Servicios -->
 
     <section id="servicios">
 
@@ -92,7 +97,7 @@
             </div>
 
             <div class="feature-box col-lg-4">
-                    <i class="icon fas fa-swimmer fa-4x"></i></i>
+                    <i class="icon fas fa-volleyball-ball fa-4x"></i></i>
                 <h3>Rehabilitación Deportiva</h3>
                 <p>Acondicionamiento muscular y atención de lesiones deportivas.</p>
             </div>
@@ -106,7 +111,7 @@
             <div class="feature-box col-lg-4">
                 <i class="icon fas fa-bone fa-4x"></i>
                 <h3>Rehabilitación Traumatología</h3>
-                <p>rehabilitación de lesiones como esguinces , fracturas, síndromes dolorosos.</p>
+                <p>Rehabilitación de lesiones como esguinces , fracturas, síndromes dolorosos.</p>
             </div>
             <div class="feature-box col-lg-4">
                     <i class="icon fas fa-diagnoses fa-4x"></i>
@@ -162,59 +167,60 @@
     </section>
 
 
-    <!-- Pricing -->
+    <!-- Clases -->
 
-    <section id="pricing">
+    <section id="clases">
 
-        <h2>A Plan for Every Dog's Needs</h2>
-        <p>Simple and affordable price plans for your and your dog.</p>
-
+        <h2>Clases Sabatinas de Natación</h2>
         <div class="row">
-            <div class="pricing-column col-lg-4 col-md-6">
+            <div class="pricing-column col-lg-4 col-md-6 text-center">
                 <div class="card">
                     <div class="card-header">
-                        <h3>Chihuahua</h3>
+                        <h3>Niños y Niñas</h3>
                     </div>
-                    <div class="card-body">
-                        <h2>Free</h2>
-                        <p>5 Matches Per Day</p>
-                        <p>10 Messages Per Day</p>
-                        <p>Unlimited App Usage</p>
-                        <button type="button" class="btn btn-lg btn-block btn-outline-primary ">Sign Up</button>
+                    <div class="card-body card-lista">
+                        <ul>
+                            <i class="fas fa-swimmer fa-4x icono-nadar"></i>
+                            <li><b>Máximo 3 niños por grupo</b></li>
+                            <li>Clases individuales y grupos reducidos</li>
+                            <li>Descuento a hermanos</li>
+                            <li>Alberca techada</li>
+                            <li>Profesor certificado</li>
+                        </ul>
                     </div>
                 </div>
             </div>
 
-            <div class="pricing-column col-lg-4 col-md-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Labrador</h3>
-                    </div>
-                    <div class="card-body">
-                        <h2>$49 / mo</h2>
-                        <p>Unlimited Matches</p>
-                        <p>Unlimited Messages</p>
-                        <p>Unlimited App Usage</p>
-                        <button type="button" class="btn btn-lg btn-block btn-primary">Sign Up</button>
+            <div class="container text-center mt-5">
+                    <div class="row mt-4">
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/1.JPG" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/2.JPG" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/3.JPG" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/4.JPG" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/5.JPG" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/6.JPG" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/7.JPG" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-lg-3 mb-4">
+                            <img src="images/8.JPG" alt="" class="img-fluid">
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="pricing-column col-lg-4 col-md-12">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Mastiff</h3>
-                    </div>
-                    <div class="card-body">
-                        <h2>$99 / mo</h2>
-                        <p>Pirority Listing</p>
-                        <p>Unlimited Matches</p>
-                        <p>Unlimited Messages</p>
-                        <p>Unlimited App Usage</p>
-                        <button type="button" class="btn btn-lg btn-block btn-primary">Sign Up</button>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </section>
 
