--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Icons / Font Awesome -->
     <script src="https://kit.fontawesome.com/6f457ba4f2.js" crossorigin="anonymous"></script>
     <!-- Mi CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400|Ubuntu&display=swap" rel="stylesheet">
 </head>
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="#clases">Clases de Natación</a>
+                                <a class="nav-link" href="#clases">Natación</a>
                             </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#instalaciones">Instalaciones</a>
@@ -228,25 +228,6 @@
                         </div>
                     </div>
                 </div>
-
-
-            <!-- <div id="testimonial-carousel" class="carousel slide" data-ride="false">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="testimonial-image" src="images/Instalaciones/1.jpeg" alt="dog-profile">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </a>
-    
-                <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon otraClase"></span>
-                </a>
-            </div> -->
         </section>
 
 
