Modificar Link de Rehabilitacion actuatica

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="#clases">Natación</a>
+                                <a class="nav-link" href="#clases">Rehabilitación Acuática</a>
                             </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#instalaciones">Instalaciones</a>
@@ -127,16 +127,17 @@
 
     <section id="clases">
 
-            <h2 class="titulo-clases">Clases Sabatinas de Natación</h2>
+            <h2 class="titulo-clases">Rehabilitación Acuática</h2>
             <div class="row">
                 <div class="pricing-column col-lg-4 col-md-6 text-center">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Niños y Niñas</h3>
+                            <h3>Clases de natación</h3>
                         </div>
                         <div class="card-body card-lista">
                             <ul>
                                 <i class="fas fa-swimmer fa-4x icono-nadar"></i>
+                                <li><b>Niños y Niñas</b></li>
                                 <li><b>Máximo 3 niños por grupo</b></li>
                                 <li>Clases individuales y grupos reducidos</li>
                                 <li>Descuento a hermanos</li>
