Modificar color de copyright

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <i class="fab fa-instagram fa-3x network-icons"></i>
         <i class="fas fa-envelope fa-3x network-icons"></i>
 
-        <p>© Copyright 2019 Karina Rodriguez</p>
+        <p class="copyright">© Copyright 2019 Karina Rodriguez</p>
 
     </footer>
 
