Ajustar tamanos con media querys

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <i class="fab fa-instagram fa-3x network-icons"></i>
         <i class="fas fa-envelope fa-3x network-icons"></i>
 
-        <p style="color: black;">© Copyright 2019 Karina Rodriguez</p>
+        <p class="copyRight" style="color: black;">© Copyright 2019 Karina Rodriguez</p>
 
     </footer>
 
