Agregar link de mail

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <i class="fab fa-twitter fa-3x network-icons"></i>
         <a href="https://www.facebook.com/REMES-Rehabilitaci%C3%B3n-M%C3%A9dica-Especializada-2331270286947582/" target="_blank"><i class="fab fa-facebook-f fa-3x network-icons"></i></a>
         <i class="fab fa-instagram fa-3x network-icons"></i>
-        <i class="fas fa-envelope fa-3x network-icons"></i>
+        <a href="mailto:informes@clinicaremes.com"><i class="fas fa-envelope fa-3x network-icons" ></i></a>
 
         <p class="copyRight" style="color: black;">© Copyright 2019 Karina Rodriguez</p>
 
